--- a/src/main.css
+++ b/src/main.css
@@ -13,3 +13,11 @@ img {
   margin: 20px 0;
   max-width: 200px;
 }
+
+.container {
+  display: flex; /* or inline-flex */
+}
+
+.item {
+  flex-basis: 50%
+}
