--- a/src/main.css
+++ b/src/main.css
@@ -8,6 +8,10 @@ body {
 h1 {
   font-size: 30px;
 }
+h3 {
+  text-align: left;
+}
+
 
 img {
   margin: 20px 0;
@@ -21,3 +25,11 @@ img {
 .item {
   flex-basis: 50%
 }
+
+ul li {
+  padding-left:8px;
+  list-style:none;
+  margin-bottom:6px;
+  /* display: inline-block; */
+  text-align:left;
+  }
